--- a/codeEditor/index.html
+++ b/codeEditor/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Online Code Editor</title>
+    <link rel="stylesheet" href="../css/style.min.css">
 </head>
 <body>
     
+    <script src="../js/script.js"></script>
 </body>
 </html>
