--- a/codeEditor/index.html
+++ b/codeEditor/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="../css/style.min.css">
 </head>
 <body>
-    
+    <div class="main-site">
+        
+    </div>
     <script src="../js/script.js"></script>
 </body>
 </html>
