--- a/codeEditor/index.html
+++ b/codeEditor/index.html
@@ -4,11 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Online Code Editor</title>
-    <link rel="stylesheet" href="../css/style.min.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/@jehankandy/jkcss@5.1.0/src/jkcss.min.css" rel="stylesheet">
 </head>
 <body>
     <div class="main-site">
-        
+        <div class="line">
+            <div class="rec-5">
+                <div class="">
+                    <label for="">HTML</label>
+                    <textarea id="for-html"></textarea>
+                </div>
+
+                <div class="">
+                    <label for="">CSS</label>
+                    <textarea id="for-html"></textarea>
+                </div>
+
+                <div class="">
+                    <label for="">JS</label>
+                    <textarea id="for-html"></textarea>
+                </div>
+            </div>
+            <div class="rec-6"></div>
+        </div>
+
+
+
+
+
     </div>
     <script src="../js/script.js"></script>
 </body>
