--- a/codeEditor/index.html
+++ b/codeEditor/index.html
@@ -5,35 +5,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Online Code Editor</title>
     <link rel="stylesheet" href="../css/style.css">
-    <link href="https://cdn.jsdelivr.net/npm/@jehankandy/jkcss@5.1.0/src/jkcss.min.css" rel="stylesheet">
 </head>
 <body>
     <div class="main-site">
-        <div class="line">
-            <div class="rec-5">
-                <div class="">
-                    <label for="">HTML</label>
-                    <textarea id="for-html"></textarea>
-                </div>
 
-                <div class="">
-                    <label for="">CSS</label>
-                    <textarea id="for-html"></textarea>
-                </div>
-
-                <div class="">
-                    <label for="">JS</label>
-                    <textarea id="for-html"></textarea>
-                </div>
+        <div class="content">
+            <div class="code-in">
+                <label for="">HTML</label><br>
+                <textarea id="for-html"></textarea>
             </div>
-            <div class="rec-6"></div>
+            <div class="code-in">                    
+                <label for="">CSS</label><br>
+                <textarea id="for-html"></textarea>
+            </div>
+            <div class="code-in">
+                <label for="">JS</label><br>
+                <textarea id="for-html"></textarea>
+            </div>
+
         </div>
 
-
-
-
-
     </div>
+    <div class="">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae, iusto deserunt? Laboriosam assumenda officiis voluptates possimus iste porro magnam voluptate, harum deserunt distinctio ipsum? Minima impedit consectetur accusantium inventore aliquam.
+    </div>
+
+
+
+
     <script src="../js/script.js"></script>
 </body>
 </html>
