--- a/codeEditor/index.html
+++ b/codeEditor/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="main-site">
-
+        <h1>Online Code Editor</h1>
         <div class="content">
             <div class="code-in">
                 <label for="">HTML</label><br>
@@ -27,7 +27,7 @@
 
     </div>
     <div class="">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae, iusto deserunt? Laboriosam assumenda officiis voluptates possimus iste porro magnam voluptate, harum deserunt distinctio ipsum? Minima impedit consectetur accusantium inventore aliquam.
+        <iframe src="" id="result-code"></iframe>
     </div>
 
 
