--- a/codeEditor/index.html
+++ b/codeEditor/index.html
@@ -27,7 +27,8 @@
 
     </div>
     <div class="">
-        <iframe src="" id="result-code"></iframe>
+        <p for="" style="padding: 2px 0;">Output</p>
+        <iframe id="result-code"></iframe>
     </div>
 
 
