--- a/codeEditor/index.html
+++ b/codeEditor/index.html
@@ -12,15 +12,15 @@
         <div class="content">
             <div class="code-in">
                 <label for="">HTML</label><br>
-                <textarea id="for-html"></textarea>
+                <textarea id="for-html" onkeyup="runCode()"></textarea>
             </div>
             <div class="code-in">                    
                 <label for="">CSS</label><br>
-                <textarea id="for-html"></textarea>
+                <textarea id="for-html" onkeyup="runCode()"></textarea>
             </div>
             <div class="code-in">
                 <label for="">JS</label><br>
-                <textarea id="for-html"></textarea>
+                <textarea id="for-html" onkeyup="runCode()"></textarea>
             </div>
 
         </div>
@@ -30,6 +30,10 @@
         <p for="" style="padding: 2px 0;">Output</p>
         <iframe id="result-code"></iframe>
     </div>
+
+    <footer>
+        Delevelop By: JKCSS || OnlineCodeEditor-v0.1.0 - 21 March 2024
+    </footer>
 
 
 
