--- a/codeEditor/index.html
+++ b/codeEditor/index.html
@@ -16,11 +16,11 @@
             </div>
             <div class="code-in">                    
                 <label for="">CSS</label><br>
-                <textarea id="for-html" onkeyup="runCode()"></textarea>
+                <textarea id="for-css" onkeyup="runCode()"></textarea>
             </div>
             <div class="code-in">
                 <label for="">JS</label><br>
-                <textarea id="for-html" onkeyup="runCode()"></textarea>
+                <textarea id="for-js" onkeyup="runCode()"></textarea>
             </div>
 
         </div>
